# report_handler

./: CHANGELOG.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml
src/report_handler/: report_handler.py  utils.py
tests/report_handler/: __init__.py  test_add_data_to_sheet.py  test_report_handler.py
