[project]
name = "report_handler"
version = "1.0.0"
authors = [
  { name="Kshitij Sinha", email="kshitij.sinha1608@gmail.com" },
  { name="Michael Bentz", email="mbentz@ufl.edu" }
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "XlsxWriter==3.0.6"
]

[project.urls]
"Homepage" = "https://github.com/ctsit/report_handler"
"Bug Tracker" = "https://github.com/ctsit/report_handler/issues"
